--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <table>
             <tr>
                 <td >
-                    <img src="img/IMG-20190814-WA0005.jpg" alt="Foto personal" width="250xp" height="300xp">
+                    <img src="img/IMG-20190814-WA0005.jpg"  width="250xp" height="300xp">
                 </td>
                 <td>
                     <h2>Karla Orellana</h2>
